--- a/src/components/const.less
+++ b/src/components/const.less
@@ -1,3 +1,79 @@
-@gray:#fefefe;
-@line:#aaa;
+@gray: #fefefe;
+@line: #aaa;
+@icon: #999;
+@tips: #888;
+@bg: #fafbfd;
+@warn: #FF9900;
+@pass: #3CC51F;
+.border-radius(@a, @b) when(@a=0) {
+    border-radius: @b;
+    -webkit-border-radius: @b;
+    -moz-border-radius: @b
+}
 
+.border-radius(@a, @b) when(@a=1) {
+    border-top-left-radius: @b;
+    -webkit-border-top-left-radius: @b;
+    -moz-border-top-left-radius: @b;
+}
+
+.border-radius(@a, @b) when(@a=2) {
+    border-top-right-radius: @b;
+    -webkit-border-top-right-radius: @b;
+    -moz-border-top-right-radius: @b;
+}
+
+.border-radius(@a, @b) when(@a=3) {
+    border-bottom-right-radius: @b;
+    -webkit-border-bottom-right-radius: @b;
+    -moz-border-bottom-right-radius: @b
+}
+
+.border-radius(@a, @b) when(@a=4) {
+    border-bottom-left-radius: @b;
+    -webkit-border-bottom-left-radius: @b;
+    -moz-border-bottom-left-radius: @b
+}
+
+.border(@a, @b: solid, @c: 1px, @d: 1, @f: 221, @g: 221, @h: 221) when (@a=0) {
+    border: rgba(@f, @g, @h, @d) @b @c;
+}
+
+.border(@a, @b: solid, @c: 1px, @d: 1, @f: 221, @g: 221, @h: 221) when(@a=1) {
+    border-top: rgba(@f, @g, @h, @d) @b @c;
+}
+
+.border(@a, @b: solid, @c: 1px, @d: 1, @f: 221, @g: 221, @h: 221) when(@a=2) {
+    border-right: rgba(@f, @g, @h, @d) @b @c;
+}
+
+.border(@a, @b: solid, @c: 1px, @d: 1, @f: 221, @g: 221, @h: 221) when(@a=3) {
+    border-bottom: rgba(@f, @g, @h, @d) @b @c;
+}
+
+.border(@a, @b: solid, @c: 1px, @d: 1, @f: 221, @g: 221, @h: 221) when(@a=4) {
+    border-left: rgba(@f, @g, @h, @d) @b @c;
+}
+
+.text-over(@row) {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -moz-line-clamp: @row;
+    -webkit-line-clamp: @row;
+    -webkit-box-orient: vertical;
+}
+
+.box-shadow(@a: 0px, @b: 0px, @c: 10px, @e: 0.2) {
+    box-shadow: @a @b @c rgba(0, 0, 0, @e);
+    -webkit-box-shadow: @a @b @c rgba(0, 0, 0, @e);
+}
+
+.text-shadow(@a: 0.4, @b: 1px, @c: 1px, @d: 3px) {
+    text-shadow: @b @c @d rgba(0, 0, 0, @a);
+}
+
+.display(@a: flex) {
+    display: @a;
+    display: -webkit-@a;
+}
