--- a/src/components/VukAlert/style.less
+++ b/src/components/VukAlert/style.less
@@ -29,8 +29,9 @@
         line-height: 12mm;
         position: relative;
         font-size: 4.2mm;
-        display: block; text-align: center;
-        color:@warn;
+        display: block;
+        text-align: center;
+        color: @warn;
         &:before {
             content: " ";
             position: absolute;
@@ -45,3 +46,5 @@
         }
     }
 }
+
+.vuk-alertx{ position: absolute;z-index: 9999; top:0px;}
