--- a/src/components/VukTop/style.less
+++ b/src/components/VukTop/style.less
@@ -10,7 +10,7 @@
         content: " ";
         position: absolute;
         left: 0;
-        bottom: 0;
+        bottom: 0px;
         right: 0;
         height: 1px;
         border-bottom: 1px solid #D9D9D9;
