--- a/src/components/VukScroll/style.less
+++ b/src/components/VukScroll/style.less
@@ -2,15 +2,15 @@
 .vuk-scroll-wrap {
     position: absolute;
     z-index: 1;
-    top: 50px;
+    top: 11mm;
     bottom: 50px;
-    left: 50px;
-    right: 50px;
+    left: 0px;
+    right: 0px;
     background: #ccc;
     overflow: hidden;
 }
 
-#scroller {
+.vuk-scroller {
     position: absolute;
     z-index: 1;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
