--- a/src/components/VukScroll/style.less
+++ b/src/components/VukScroll/style.less
@@ -2,11 +2,11 @@
 .vuk-scroll-wrap {
     position: absolute;
     z-index: 1;
-    top: 11mm;
+   
     bottom: 50px;
     left: 0px;
     right: 0px;
-    background: #ccc;
+   
     overflow: hidden;
 }
 
@@ -32,27 +32,14 @@
     text-size-adjust: none;
 }
 
-#scroller ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    text-align: left;
-}
-
-#scroller li {
-    padding: 0 10px;
-    height: 40px;
-    line-height: 40px;
-    border-bottom: 1px solid #ccc;
-    border-top: 1px solid #fff;
-    background-color: #fafafa;
-    font-size: 14px;
-}
-
 .vuk-scroll-loading {
     position: absolute;
     top: -10mm;
     width: 100%;
     text-align: center;
+}
+
+.vuk-scroll-more{
+     height: 60px; bottom: -60px; position: absolute;
+     width: 100%; text-align: center; line-height: 40px;
 }
