--- a/src/svg/less/iscroll.less
+++ b/src/svg/less/iscroll.less
@@ -1,5 +1,5 @@
 .iscroll-wrapper {
-    position: absolute;
+    position: fixed;
     overflow: hidden;
     -ms-touch-action: none;
     -webkit-touch-callout: none;
@@ -29,6 +29,7 @@
         -ms-transform: translateZ(0);
         -o-transform: translateZ(0);
         transform: translateZ(0);
+        
     }
     .scroll-say-bar {
         position: fixed;
