--- a/src/svg/less/page.less
+++ b/src/svg/less/page.less
@@ -10,7 +10,6 @@
     background-color: #1b2024;
     z-index: 9999;
     text-align: center;
-    font-size: 30px;
 }
 
 .start-left {
@@ -40,160 +39,73 @@
     margin-left: -100px;
     transform: scale(0.8, 0.8);
     z-index: 20;
-}
-
-.left-cricle,
-.right-cricle {
-    width: 50%;
-    height: 100%;
-    float: left;
-    overflow: hidden;
-    position: relative;
-    box-sizing: border-box;
-}
-
-.cricle-line {
-    border: transparent solid 2px;
-    width: 180px;
-    height: 180px;
-    border-radius: 200px;
-    box-sizing: border-box;
-    position: absolute;
-    top: 10px;
-    /*下边阴影*/
-}
-
-.left-cricle .cricle-line {
-    border-left: #ff5600 solid 2px;
-    border-top: #ff5600 solid 2px;
-    left: 10px;
-    /*消失* -225  -45 */
-}
-
-.right-cricle .cricle-line {
-    border-right: #ff5600 solid 2px;
-    border-top: #ff5600 solid 2px;
-    position: absolute;
-    left: -90px;
-    /*消失* -135  45 */
-}
-
-.out-box-loading {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
-.cricle-indoor {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    animation: rotate 6s linear infinite alternate;
-    -webkit-animation: rotate 6s linear infinite alternate;
-    .cricle-solid {
+    .turn-box {
         position: absolute;
-        width: 108px;
-        height: 108px;
-        background-color: #ff00f4;
-        left: 50%;
-        top: 50%;
-        margin-left: -54px;
-        margin-top: -54px;
-        background: -webkit-linear-gradient(-60deg, rgba(234, 80, 23, 0.9), rgba(255, 88, 0, 0.6));
-        background: linear-gradient(60deg, rgba(234, 80, 23, 0.9), rgba(255, 88, 0, 0.6));
-        border-radius: 100px;
-        z-index: 10;
+        width: 100%;
+        height: 100%;
+        top: 0px;
+        left: 0px;
+        animation: rotate 6s linear infinite alternate;
+        -webkit-animation: rotate 6s linear infinite
     }
-    .cricle-line {
+    .circle1 {
         position: absolute;
-        height: 120px;
-        width: 120px;
-        margin-left: -60px;
-        margin-top: -60px;
-        left: 50%;
-        top: 50%;
-        box-shadow: rgba(255, 249, 201, 0.4) 0 0 4px inset, rgba(255, 249, 201, 0.4) 0 0 4px;
-        border: #fd5306 solid 1.4px; // border-image: -webkit-linear-gradient( red, blue) 30 30;
-        // border-image: -moz-linear-gradient( red, blue) 30 30;
-        // border-image: linear-gradient( red, blue) 30 30;
-        .border-radius (0, 120px);
-        box-sizing: border-box;
-        z-index: 1;
-        background-color: #1b2024;
-    }
-    .cricle-line2 {
-        position: absolute;
-        width: 144px;
-        height: 144px;
-        left: 50%;
-        top: 50%;
-        margin-left: -72px;
-        margin-top: -72px;
-        box-sizing: border-box;
-        transform: rotate(45deg);
-        .border-radius(0, 150px);
-        border: #fd5306 solid 1.4px;
-        border-top: transparent solid 1.4px;
-        box-shadow: rgba(255, 249, 201, 0.4) 0 0 4px inset, rgba(255, 249, 201, 0.4) 0 0 4px;
-        z-index: 0;
-    }
-    .cricle-piece {
-        width: 148px;
-        height: 148px;
-        box-sizing: border-box;
-        border: transparent solid 5px;
-        border-top: #fd5306 solid 5px;
-        left: 50%;
-        top: 50%;
-        margin-left: -74px;
-        margin-top: -74px;
-        position: absolute;
-        .border-radius(0, 148px);
+        top: 10%;
+        left: 10%;
+        width: 80%;
+        height: 80%;
     }
     .c1 {
-        transform: rotate(210deg);
+        transform: rotate(-50deg);
     }
     .c2 {
         transform: rotate(60deg);
     }
     .c3 {
-        transform: rotate(-10deg);
+        transform: rotate(190deg);
     }
-    .black-box {
-        width: 30px;
-        height: 8px;
+    .c4 {
+        transform: rotate(36deg);
+        padding: 4px;
+    }
+    .c5 {
+        transform: rotate(160deg);
+        padding: 0px;
+    }
+    .c6 {
+        background-color: #fd5306;
+        width: 14px;
+        height: 14px;
+        .border-radius(0, 100%);
         position: absolute;
-        background-color: #1b2024;
-        right: 55px;
-        top: 32px;
-        transform: rotate(28deg);
+        top: 36%;
+        left: 10%;
     }
-    .cricle-dot {
-        background-color: #ff5600;
+    .c0 {
+        transform: rotate(80deg);
+    }
+    .circle2 {
+        width: 66%;
         position: absolute;
-        box-shadow: rgba(255, 249, 201, 0.4) 0 0 4px;
+        top: 17%;
+        left: 17%;
     }
-    .dot1 {
-        width: 12px;
-        height: 12px;
-        .border-radius(0, 12px);
-        left: 24px;
-        top: 80px;
+    .circle3 {
+        width: 56%;
+        height: 56%;
+        top: 22%;
+        left: 22%;
+        background-color: #eee;
+        position: absolute;
+        .border-radius(0, 100%);
+        background: -webkit-linear-gradient(-60deg, rgba(234, 80, 23, .9), rgba(255, 88, 0, .6));
+        background: linear-gradient(60deg, rgba(234, 80, 23, .9), rgba(255, 88, 0, .6));
     }
-    .dot2 {
-        width: 6px;
-        height: 6px;
-        .border-radius(0, 6px);
-        left: 150px;
-        top: 145px;
-    }
-    .dot3 {
-        width: 6px;
-        height: 6px;
-        .border-radius(0, 6px);
-        left: 128px;
-        top: 33px;
-    }
+}
+
+svg {
+    padding: 0px;
+    margin: 0px;
 }
 
 .car-name {
@@ -215,7 +127,7 @@
     transform: translate(-50%, -50%);
     text-shadow: 0 0 3px rgba(255, 255, 255, 0.5);
     font-weight: normal;
-    font-size: 0.3rem;
+    font-size: .34rem;
 }
 
 .tips-click {
@@ -435,7 +347,6 @@
         text-align: center;
         color: #fff;
         font-style: normal;
-        line-height: .rem;
         text-align: center;
         width: 100%;
         color: #bb8c47;
@@ -618,10 +529,9 @@
 
 .app {
     position: fixed;
-    top: 0px;
     left: 0px;
     right: 0px;
-    bottom: 0px;
+    bottom: 0px; z-index: 1000;
 }
 
 .wgc-shop-list {
@@ -645,7 +555,7 @@
 
 .wgc-shop-page {
     background-color: rgba(0, 0, 0, .6);
-    position: absolute;
+    position: fixed;
     top: 0px;
     bottom: 0px;
     left: 0px;
