--- a/src/svg/less/public.less
+++ b/src/svg/less/public.less
@@ -13,7 +13,9 @@ body {
     color: #fff;
 }
 
+
 /* 公共*/
+
 a,
 body h1,
 div,
@@ -23,8 +25,476 @@ h4,
 h5,
 h6,
 li,
-ul,i {
+ul,
+i {
     list-style: none;
     padding: 0;
-    margin: 0; font-style: normal;
+    margin: 0;
+    font-style: normal;
 }
+
+.hs_kw3_configpl::before {
+    content: "元";
+}
+
+.hs_kw4_configpl::before {
+    content: "万";
+}
+
+.hs_kw5_configpl::before {
+    content: "长安";
+}
+
+.hs_kw6_configpl::before {
+    content: "福特";
+}
+
+.hs_kw10_configpl::before {
+    content: "实测";
+}
+
+.hs_kw12_configpl::before {
+    content: "综合";
+}
+
+.hs_kw11_configpl::before {
+    content: "油耗";
+}
+
+.hs_kw13_configpl::before {
+    content: "离地间隙";
+}
+
+.hs_kw14_configpl::before {
+    content: "质保";
+}
+
+.hs_kw7_configpl::before {
+    content: "中型SUV";
+}
+
+.hs_kw8_configpl::before {
+    content: "上市";
+}
+
+.hs_kw9_configpl::before {
+    content: "时间";
+}
+
+.hs_kw15_configpl::before {
+    content: "年或";
+}
+
+.hs_kw16_configpl::before {
+    content: "长度";
+}
+
+.hs_kw17_configpl::before {
+    content: "宽度";
+}
+
+.hs_kw19_configpl::before {
+    content: "轴距";
+}
+
+.hs_kw20_configpl::before {
+    content: "前";
+}
+
+.hs_kw18_configpl::before {
+    content: "高度";
+}
+
+.hs_kw22_configpl::before {
+    content: "后轮距";
+}
+
+.hs_kw23_configpl::before {
+    content: "整备";
+}
+
+.hs_kw24_configpl::before {
+    content: "质量";
+}
+
+.hs_kw25_configpl::before {
+    content: "车门";
+}
+
+.hs_kw27_configpl::before {
+    content: "油箱";
+}
+
+.hs_kw28_configpl::before {
+    content: "容积";
+}
+
+.hs_kw28_configpl::before {
+    content: "容积";
+}
+
+.hs_kw29_configpl::before {
+    content: "号";
+}
+
+.hs_kw30_configpl::before {
+    content: "排量";
+}
+
+.hs_kw31_configpl::before {
+    content: "进气";
+}
+
+.hs_kw32_configpl::before {
+    content: "涡轮";
+}
+
+.hs_kw33_configpl::before {
+    content: "增压";
+}
+
+.hs_kw34_configpl::before {
+    content: "气缸";
+}
+
+.hs_kw35_configpl::before {
+    content: "排列";
+}
+
+.hs_kw34_configpl::before {
+    content: "气缸";
+}
+
+.hs_kw36_configpl::before {
+    content: "气门数";
+}
+
+.hs_kw37_configpl::before {
+    content: "压缩比";
+}
+
+.hs_kw38_configpl::before {
+    content: "配气";
+}
+
+.hs_kw39_configpl::before {
+    content: "机构";
+}
+
+.hs_kw40_configpl::before {
+    content: "缸径";
+}
+
+.hs_kw41_configpl::before {
+    content: "行程";
+}
+
+.hs_kw42_configpl::before {
+    content: "最大";
+}
+
+.hs_kw43_configpl::before {
+    content: "功率";
+}
+
+.hs_kw44_configpl::before {
+    content: "转速";
+}
+
+.hs_kw45_configpl::before {
+    content: "扭矩";
+}
+
+.hs_kw46_configpl::before {
+    content: "燃油";
+}
+
+.hs_kw47_configpl::before {
+    content: "供油";
+}
+
+.hs_kw48_configpl::before {
+    content: "直喷";
+}
+
+.hs_kw49_configpl::before {
+    content: "缸盖";
+}
+
+.hs_kw50_configpl::before {
+    content: "铝";
+}
+
+.hs_kw51_configpl::before {
+    content: "缸体";
+}
+
+.hs_kw52_configpl::before {
+    content: "环保";
+}
+
+.hs_kw53_configpl::before {
+    content: "标准";
+}
+
+.hs_kw54_configpl::before {
+    content: "国";
+}
+
+.hs_kw58_configpl::before {
+    content: "中央";
+}
+
+.hs_kw59_configpl::before {
+    content: "差速器";
+}
+
+.hs_kw64_configpl::before {
+    content: "麦弗逊";
+}
+
+.hs_kw65_configpl::before {
+    content: "独立";
+}
+
+.hs_kw63_configpl::before {
+    content: "悬架";
+}
+
+.hs_kw67_configpl::before {
+    content: "多连杆";
+}
+
+.hs_kw69_configpl::before {
+    content: "助力";
+}
+
+.hs_kw69_configpl::before {
+    content: "助力";
+}
+
+.hs_kw72_configpl::before {
+    content: "通风";
+}
+
+.hs_kw74_configpl::before {
+    content: "盘式";
+}
+
+.hs_kw75_configpl::before {
+    content: "后制动器";
+}
+
+.hs_kw77_configpl::before {
+    content: "电子";
+}
+
+.hs_kw76_configpl::before {
+    content: "驻车";
+}
+
+.hs_kw70_configpl::before {
+    content: "承载式";
+}
+
+.hs_kw79_configpl::before {
+    content: "规格";
+}
+
+.hs_kw80_configpl::before {
+    content: "后轮胎";
+}
+
+.hs_kw82_configpl::before {
+    content: "全尺寸";
+}
+
+.hs_kw81_configpl::before {
+    content: "备胎";
+}
+
+.hs_kw83_configpl::before {
+    content: "驾驶";
+}
+
+.hs_kw84_configpl::before {
+    content: "气囊";
+}
+
+.hs_kw85_configpl::before {
+    content: "后排";
+}
+
+.hs_kw86_configpl::before {
+    content: "儿童座椅";
+}
+
+.hs_kw87_configpl::before {
+    content: "接口";
+}
+
+.hs_kw88_configpl::before {
+    content: "制动力分配";
+}
+
+.hs_kw89_configpl::before {
+    content: "牵引力控制";
+}
+
+.hs_kw91_configpl::before {
+    content: "并线";
+}
+
+.hs_kw93_configpl::before {
+    content: "主动";
+}
+
+.hs_kw83_configpl::before {
+    content: "驾驶";
+}
+
+.hs_kw76_configpl::before {
+    content: "驻车";
+}
+
+.hs_kw94_configpl::before {
+    content: "视频";
+}
+
+.hs_kw95_configpl::before {
+    content: "影像";
+}
+
+.hs_kw96_configpl::before {
+    content: "摄像头";
+}
+
+.hs_kw57_configpl::before {
+    content: "适";
+}
+
+.hs_kw76_configpl::before {
+    content: "驻车";
+}
+
+.hs_kw97_configpl::before {
+    content: "空气";
+}
+
+.hs_kw100_configpl::before {
+    content: "限滑";
+}
+
+.hs_kw59_configpl::before {
+    content: "差速器";
+}
+
+.hs_kw101_configpl::before {
+    content: "差速锁";
+}
+
+.hs_kw102_configpl::before {
+    content: "后桥";
+}
+
+.hs_kw93_configpl::before {
+    content: "主动";
+}
+
+.hs_kw103_configpl::before {
+    content: "整体";
+}
+
+.hs_kw104_configpl::before {
+    content: "天窗";
+}
+
+.hs_kw106_configpl::before {
+    content: "无钥匙";
+}
+
+.hs_kw107_configpl::before {
+    content: "调节";
+}
+
+.hs_kw111_configpl::before {
+    content: "行车电脑";
+}
+
+.hs_kw110_configpl::before {
+    content: "加热";
+}
+
+.hs_kw112_configpl::before {
+    content: "全液晶";
+}
+
+.hs_kw113_configpl::before {
+    content: "仪表盘";
+}
+
+.hs_kw93_configpl::before {
+    content: "主动";
+}
+
+.hs_kw114_configpl::before {
+    content: "充电";
+}
+
+.hs_kw114_configpl::before {
+    content: "充电";
+}
+
+.hs_kw115_configpl::before {
+    content: "材质";
+}
+
+.hs_kw73_configpl::before {
+    content: "风";
+}
+
+.hs_kw118_configpl::before {
+    content: "支撑";
+}
+
+.hs_kw119_configpl::before {
+    content: "座椅移动";
+}
+
+.hs_kw120_configpl::before {
+    content: "放倒";
+}
+
+.hs_kw124_configpl::before {
+    content: "外接";
+}
+
+.hs_kw125_configpl::before {
+    content: "音源";
+}
+
+.hs_kw128_configpl::before {
+    content: "扬声器";
+}
+
+.hs_kw129_configpl::before {
+    content: "喇叭";
+}
+
+.hs_kw130_configpl::before {
+    content: "近光灯";
+}
+
+.hs_kw132_configpl::before {
+    content: "远光灯";
+}
+
+.hs_kw131_configpl::before {
+    content: "卤素";
+}
+
+.hs_kw133_configpl::before {
+    content: "升";
+}
+
+//-------------
